@@ -1,6 +1,13 @@
 gtk3-nocsd ChangeLog
 ====================
 
+New in version 4 (unreleased)
+-----------------------------
+
+  * Support python-gi again by not caching the result of the version
+    check if Gtk is not yet loaded. (python-gi loads Glib before it
+    loads Gtk.)
+
 New in version 3
 ----------------
 
